2003-06-13  Tim Waugh  <twaugh@redhat.com>
	* src/docgen/OpenOfficeDoc.py: Escape special XML characters. 
	* src/docgen/HtmlDoc.py: Properly build style declaration.
	* src/plugins/FtmStyleDescendants.py: Setup before opening. 

2003-06-12  Tim Waugh  <twaugh@redhat.com>
	* src/docgen/OpenOfficeDoc.py: Surround images by paragraph tags
	when inside the table cell. 

2003-06-12  Don Allingham  <dallingham@users.sourceforge.net>
	* src/DrawDoc.py: support for drawing wedges and rotated text
	* src/docgen/PSDrawDoc.py: postscipt support for wedges and rotated 
	text
	* src/docgen/PdfDrawDoc.py: PDF support for wedges and rotated text
	* src/docgen/SvgDrawDoc.py: SVG support for wedges and rotated text
	* src/docgen/OpenDrawDoc.py: OpenOffice support for wedges and rotated 
	text
	* src/plugins/FanChart.py: Fan chart report

2003-06-12  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/docgen/KwordDoc.py (write_text): Replace & with &amp in text.
	Closes gramps-bugs-649228, finally.
	(start_table): close FRAMESET tag conditionally. This prevents closing
	it twice (both in end_cell and start_table). Closes 753151.

2003-06-12  Tim Waugh  <twaugh@redhat.com>
	* src/docgen/OpenOfficeDoc.py: Fix typo. Prevent images from being
	copied more than once.

2003-06-11  Don Allingham  <dallingham@users.sourceforge.net>
	* src/GenericFilter.py: rewrote IsAncestorOf and IsDescendantOf rules
	to be more efficient and to properly handle loop detection.
	* src/RelLib.py: Added the getValidDeath and getValidBirth methods to
	the Person class
	* src/plugins/WebPage.py: Handle filter errors
	* src/docgen/OpenOfficeDoc.py: pass non-unicode names to zipfile

2003-06-11  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/EditPlace.py (on_switch_page): Fix page numbers to enable proper
	loading of gallery and references. 
	* src/EditPlace.py: Add url_edit_callback() and pass it on to UrlEdit 
	when clicked on Add or Edit in Place's Url list.

2003-06-11  Alex Roitman  <shura@alex.neuro.umn.edu>